Added Spring Security and JWT with role based registration and login